# txdxai_Flask

./: .gitignore  .replit  AGENT_KEY_RECOVERY.md  README.md  TxDxAI_Postman_Collection.json  pyproject.toml  replit.md  run.py  start_services.sh
attached_assets/: Pasted--PROMPT-Provisionamiento-de-SOPHIA-por-empresa-multi-tenant-Objetivo-Agregar-al-backend-Flask-1759875657749_1759875657750.txt  Pasted--Problema-1-SOPHIA-no-responde-En-la-l-nea-88-del-chat-se-usa-agent-access-key-st-session-s-1759992589065_1759992589065.txt  Pasted-Contexto-Ya-tengo-un-backend-base-en-Flask-con-Multi-tenant-empresas-y-usuarios-con-roles-ADMIN-U-1759873865782_1759873865783.txt  Pasted-Contexto-general-Estoy-creando-un-sistema-llamado-TxDxAI-para-ciberseguridad-y-automatizaci-n-de-tic-1759871532300_1759871532300.txt  Pasted-Objetivo-Ajustar-el-microservicio-SOPHIA-para-que-Salga-de-MOCK-MODE-y-use-el-Microsoft-Agent-Fram-1759903204066_1759903204067.txt  Pasted-PROMPT-Integraci-n-de-Voz-Speech-para-SOPHIA-Objetivo-A-adir-soporte-de-voz-entrada-por-voz-y--1759907210647_1759907210647.txt  Pasted-PROMPT-SOPHIA-Multi-tenant-con-modelo-y-credenciales-por-empresa-Objetivo-Ajustar-el-servicio-SOP-1759882415001_1759882415001.txt  Pasted-Ya-tengo-un-backend-Flask-multi-tenant-que-Maneja-empresas-y-usuarios-con-JWT-Permite-provisiona-1759877509829_1759877509829.txt
basic_frontend/: README.md  index.html  script.js
sophia_service/: .env.example  README.md  app.py  config.py  openapi.yaml  orchestrator.py  requirements.txt
sophia_service/sophia/: handoff.py  (+6 more)
txdxai/: __init__.py  app.py  config.py
(+56 files in other folders)
